[gd_scene load_steps=6 format=2]

[ext_resource path="res://Modules/UI/Choose Feature/ChooseFeature.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other Themes/FlatUI/kenneyUI-green.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Other Themes/FlatUI/kenvector_future.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[node name="ChooseFeature" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="UserLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "User"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.5
margin_top = -144.0
margin_right = 297.5
margin_bottom = 144.0
custom_constants/separation = 96

[node name="FirstBtn" type="Button" parent="VBoxContainer"]
margin_right = 595.0
margin_bottom = 96.251
rect_min_size = Vector2( 448, 96 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "First"

[node name="SecondBtn" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 595.0
margin_bottom = 288.251
rect_min_size = Vector2( 448, 96 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Second"

[connection signal="pressed" from="VBoxContainer/FirstBtn" to="." method="_on_FirstBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/SecondBtn" to="." method="_on_SecondBtn_pressed"]
